carousel items spacing fix

--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -1,6 +1,8 @@
 @import "../../../styles/variables.scss";
 
-.c-carousel .owl-next, .c-carousel .owl-next {
-    height: 60px;
-    width: 60px;
+.c-carousel {
+    &__cards {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
 }
