--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,8 +171,8 @@ meter {
   }
 }
 .c-carousel .owl-next{
-  right: -25px;
+  right: -15px;
 }
 .c-carousel .owl-prev {
-  left: -25px;
+  left: -15px;
 }
